[gd_scene load_steps=3 format=3 uid="uid://gspetkbgj62t"]

[ext_resource type="Script" path="res://scripts/end_menu.gd" id="1_ukelk"]

[sub_resource type="LabelSettings" id="LabelSettings_lthof"]
font_size = 50

[node name="EndMenu" type="Node"]
script = ExtResource("1_ukelk")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Earned 0 $"
label_settings = SubResource("LabelSettings_lthof")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Next day"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
